--- a/anfisa/templates/ice_cream/ice_cream_detail.html
+++ b/anfisa/templates/ice_cream/ice_cream_detail.html
@@ -1,4 +1,4 @@
-anfisa
+{% comment %} anfisa
 ├── anfisa/     #  Главная папка проекта
 ├── ice_cream/  #  Папка приложения
 ├── templates  <-- Директория для шаблонов
@@ -6,4 +6,4 @@ anfisa
 │        ├── ice_cream_detail.html # Шаблон подробной информации о мороженом
 │        ├── ice_cream_list.html   # Шаблон списка мороженого
 │        └── index.html            # Шаблон главной страницы
-└──  manage.py
+└──  manage.py {% endcomment %}
