--- a/anfisa/templates/ice_cream/ice_cream_list.html
+++ b/anfisa/templates/ice_cream/ice_cream_list.html
@@ -13,6 +13,7 @@
   <main>
     {% block content %}
     Список мороженого быть тут должен
+    <a href="{% url 'ice_cream:index' %}">Главная</a>
     {% endblock %}
   </main>
   <footer>
